--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -68,7 +68,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_HASH: ${{ github.sha }}
         run: |
-          COMMAND="beet -s data_pack.name=\"datapack\" -s resource_pack.name=\"resourcepack\" -s meta.weld_deps.enabled=false && beet -s data_pack.name=\"datapack-bundled\" -s resource_pack.name=\"resourcepack-bundled\""
+          COMMAND="poetry run beet -s data_pack.name=\"datapack\" -s resource_pack.name=\"resourcepack\" -s meta.weld_deps.enabled=false && poetry run beet -s data_pack.name=\"datapack-bundled\" -s resource_pack.name=\"resourcepack-bundled\""
           /usr/bin/xvfb-run -s "-screen 0 1920x1080x24 +extension GLX +extension RENDER" $COMMAND
       
       # Upload build/ datapack.zip, resourcepack.zip, datapack-bundled.zip, resourcepack-bundled.zip
