feat: add src directory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,12 +61,12 @@ require=[
 
 [tool.beet.data_pack]
 name = "{{ project_id }}_{{ project_version }}_dp_bundled"
-load = "."
+load = "src"
 pack_format = 48
 
 [tool.beet.resource_pack]
 name = "{{ project_id }}_{{ project_version }}_rp_bundled"
-load = "."
+load = "src"
 
 [tool.beet.meta]
 mc_supports = ["1.21"]
