feat: add basiic beet plugin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ output = "build"
 pipeline = [
     "beet.contrib.unknown_files",
     "mecha",
+    "template",
     "template.versioning",
 ]
 require=[
