--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ mecha = ">=0.94.0"
 weld-deps = ">=0.8.0"
 bolt = "^0.48.0"
 model-resolver = "^0.9.0"
+simple-item-plugin = ">=0.5.0"
 
 [tool.poetry.dev-dependencies]
 python-semantic-release = "^8.7.0"
@@ -51,7 +52,9 @@ pipeline = [
     "beet.contrib.unknown_files",
     "mecha",
     "template",
-    "template.versioning",
+    "simple_item_plugin",
+    "simple_item_plugin.guide",
+    "simple_item_plugin.versioning",
 ]
 require=[
     "bolt",
