--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-beet = {git = "https://github.com/edayot/beet.git", branch = "1.21-fixes_from_TheNuclearNexus_branch"}
-mecha = ">=0.94.0"
+beet = ">=0.108.3"
+mecha = ">=0.95.2"
 weld-deps = ">=0.8.0"
-bolt = "^0.48.0"
-model-resolver = "^0.9.0"
+bolt = ">=0.49.1"
+model-resolver = ">=0.10.0"
 simple-item-plugin = ">=0.5.0"
 
 [tool.poetry.dev-dependencies]
@@ -49,12 +49,8 @@ upload_to_vcs_release = true
 output = "build"
 
 pipeline = [
-    "beet.contrib.unknown_files",
-    "mecha",
-    "template",
     "simple_item_plugin",
-    "simple_item_plugin.guide",
-    "simple_item_plugin.versioning",
+    "template",
 ]
 require=[
     "bolt",
