feat: add guide to template #1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ python-semantic-release = "^8.7.0"
 
 [tool.beet.meta.simple_item_plugin]
 custom_model_data = 1430000
-generate_guide = false
+generate_guide = true
 
 [tool.beet.meta.model_merging]
 predicate_order = ["custom_model_data", "pulling", "pull", "charged", "firework"]
