update template for modrinth

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ load = "src"
 [tool.beet.meta]
 mc_supports = ["1.21"]
 minecraft_version = "1.21"
+modrinth_id = "template"
 
 [tool.beet.meta.mecha]
 multiline = true
